Shared:Components:ArticleItem: fix the position of an element on tablets

--- a/packages/shared/components/article-item/ArticleItem.module.scss
+++ b/packages/shared/components/article-item/ArticleItem.module.scss
@@ -367,6 +367,12 @@
     }
   }
 
+  &:global(.ai-agents):not(.showText) {
+    @include mixins.tablet {
+      justify-content: center;
+    }
+  }
+
   &.endOfBlock {
     margin-bottom: 16px;
   }
